build/tests/git-interaction/eventListenerRoute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    eventlistener: get-source-listener-interceptor
  name: get-source-listener-el
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: get-source-listener-interceptor
